mc-bot: headless client that records a session as a ReplayMod .mcpr
The long-term goal for the e2e tests is a client-side trace: when a VM test
fails, being able to open exactly what a client saw and scrub through it.
ReplayMod's .mcpr format is just that — a zip of recording.tmcpr (per
packet: ms offset + length + the raw clientbound bytes) and metaData.json —
so a bot that joins and records is enough; no video, no world state.

mc-bot (packages/minecraft/minecraft/bot) is that bot: it dials, logs in
offline (vanilla-derived offline UUID, so the session is indistinguishable
from a real client's), answers the configuration handshake with an honest
empty SelectKnownPacks — which makes the server inline full registry data,
keeping the replay self-contained — then sits in the play state echoing
keep-alives while every clientbound packet is recorded. Recording starts at
LoginSuccess (ReplayStudio expects the stream to open in the LOGIN state);
compression negotiation is acted on but not recorded. The archive is
written even when the session ends in a kick or network failure, because
the replay of a failing run is the whole point.

Framing/VarInt/string primitives come from mc-protocol; packet ids are
transcribed in one table from the pinned Minestom's PacketRegistry
(2026.07.01-26.1.2, protocol 775), the same pin as servers/spleef, so a
version bump moves them deliberately.

tests/minestom-spleef-vm.nix now joins the booted server as a real player,
records ~8s, and exports /tmp/spleef.mcpr as a test artifact. Verified
against a live spleef server: 359 packets over 7.5s, stream opens at
LoginSuccess, JoinGame present, archive parses.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TjK7Gph8VBHzU8bcdYBK5G